--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	</div>
 	
     <h2>Missing Ingredients</h2>
-    <a href="mailto:stevenmasrour@gmail.com?cc=aheraz@uxwid.net&subject=Missing ingredients&body=Buy 1 pack of eggs">Buy these Ingredients</a>
+    <a href="mailto:stevenmasrour@gmail.com?cc=aheraz@uxwid.net&subject=Missing ingredients&body=Buy 1 pack of eggs, 1 block of cheese.">Buy these Ingredients</a>
 	<!-- a href="mailto:aheraz@uxwid.net?cc=chloe@uxwid.com,christian@uxwid.com&bcc=pedro@uxwid.com&subject=Missing ingredients&body=Buy 500kg of cheese">Buy these Ingredients</a> -->
     
     <p><b>Disclaimer:</b> Do NOT actually use recipe.</p>
